--- a/website/ttyshot/pipelines.html
+++ b/website/ttyshot/pipelines.html
@@ -13,9 +13,9 @@
        </span><span class="sgr-32">var</span><span class=""> </span><span class="sgr-35">state</span><span class=""> </span><span class="sgr-33">=</span><span class=""> </span><span class="sgr-35">$issue</span><span class="sgr-1">[</span><span class="">state</span><span class="sgr-1">]</span><span class="">                            
        </span><span class="sgr-32">echo</span><span class=""> </span><span class="sgr-1">(</span><span class="sgr-32">colored</span><span class=""> </span><span class="sgr-35">$state</span><span class="sgr-1">)</span><span class=""> </span><span class="sgr-35">$id</span><span class=""> </span><span class="sgr-35">$title</span><span class="">                     
    </span><span class="sgr-1">}</span><span class="">                                                        </span>
+<span class="sgr-92">open  </span><span class=""> 1263 A `file:is-tty` command would be useful</span>
 <span class="sgr-92">open  </span><span class=""> 1593 A mechanism to trap &#34;interrupts&#34; would be use</span>
 <span class="sgr-92">open  </span><span class=""> 1591 Add a &amp;benchmark option to the time command</span>
 <span class="sgr-92">open  </span><span class=""> 1592 Should `make style` implicitly run the `codes</span>
-<span class="sgr-92">open  </span><span class=""> 1587 vi append command binding</span>
-<span class="sgr-92">open  </span><span class=""> 1590 Correct the documentation for the `try` comma
+<span class="sgr-92">open  </span><span class=""> 1587 vi append command binding
 ~&gt;                                                  </span><span class="sgr-7">elf@host</span>
