--- a/website/ttyshot/ref/edit/completion-mode.html
+++ b/website/ttyshot/ref/edit/completion-mode.html
@@ -1,4 +1,6 @@
 <span class="">~&gt; </span><span class="sgr-32">cd</span><span class=""> elvish                                                
-~/elvish&gt; </span><span class="sgr-32">vim</span><span class=""> README.md </span><span class="sgr-4">README.md </span><span class="">                  </span><span class="sgr-7">elf@host</span>
-<span class="sgr-1 sgr-37 sgr-45"> COMPLETING argument </span><span class=""> .md</span>
-<span class="sgr-7">README.md</span><span class="">                                    </span>
+~/elvish&gt; </span><span class="sgr-32">vim</span><span class=""> CONTRIBUTING.md </span><span class="sgr-4">README.md </span><span class="">            </span><span class="sgr-7">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> COMPLETING argument </span><span class=""> .md
+0.x.0-release-notes.md  </span><span class="sgr-7">README.md  </span>
+<span class="">CONTRIBUTING.md         SECURITY.md
+PACKAGING.md                  </span>
