--- a/website/ttyshot/tour/navigation.html
+++ b/website/ttyshot/tour/navigation.html
@@ -1,17 +1,17 @@
 <span class="">~&gt; </span><span class="sgr-32">cd</span><span class=""> elvish                                                
 ~/elvish&gt;                                           </span><span class="sgr-7">elf@host</span>
 <span class="sgr-1 sgr-37 sgr-45"> NAVIGATING </span><span class=""> </span>
-<span class="sgr-1 sgr-34"> bash  </span><span class=""> </span><span class="sgr-7"> Makefile           </span><span class="sgr-7 sgr-35"> </span><span class=""> SPECS := $(shell find . -name</span><span class="sgr-7 sgr-35"> </span>
-<span class="sgr-1 sgr-7 sgr-34"> elvis </span><span class="">  README.md          </span><span class="sgr-7 sgr-35"> </span><span class=""> HTMLS := $(SPECS:.spec=.html)</span><span class="sgr-7 sgr-35"> </span>
-<span class="sgr-1 sgr-34"> tmp   </span><span class="">  control-structures </span><span class="sgr-7 sgr-35"> </span><span class="">                              </span><span class="sgr-7 sgr-35"> </span>
-<span class="sgr-1 sgr-34"> zsh   </span><span class="">  control-structures </span><span class="sgr-7 sgr-35"> </span><span class=""> all: $(HTMLS)                </span><span class="sgr-7 sgr-35"> </span>
-<span class="">         control-structures </span><span class="sgr-7 sgr-35"> </span><span class="">                              </span><span class="sgr-7 sgr-35"> </span>
-<span class="">        </span><span class="sgr-1 sgr-34"> fundamentals       </span><span class="sgr-7 sgr-35"> </span><span class=""> %.html: %.spec ../tools/ttysh</span><span class="sgr-7 sgr-35"> </span>
-<span class="">         histlist-mode.html </span><span class="sgr-7 sgr-35"> </span><span class="">     ../tools/ttyshot.bin $&lt;  </span><span class="sgr-7 sgr-35"> </span>
-<span class="">         histlist-mode.raw  </span><span class="sgr-7 sgr-35"> </span><span class="">                              </span><span class="sgr-7 sgr-35"> </span>
-<span class="">         histlist-mode.spec </span><span class="sgr-7 sgr-35"> </span><span class=""> .PHONY: all                  </span><span class="sgr-7 sgr-35"> </span>
-<span class="">         location-mode.html </span><span class="sgr-7 sgr-35"> </span><span class="">                              </span><span class="sgr-7 sgr-35"> </span>
-<span class="">         location-mode.raw  </span><span class="sgr-35">│</span><span class=""> .SECONDEXPANSION:            </span><span class="sgr-7 sgr-35"> </span>
-<span class="">         location-mode.spec </span><span class="sgr-35">│</span><span class="">                              </span><span class="sgr-7 sgr-35"> </span>
-<span class="">         navigation-mode.ht </span><span class="sgr-35">│</span><span class=""> ../tools/ttyshot.bin: $$(wild</span><span class="sgr-7 sgr-35"> </span>
-<span class="">         navigation-mode.ra </span><span class="sgr-35">│</span><span class="">     make -C .. tools/ttyshot.</span><span class="sgr-35">│</span>
+<span class="sgr-1 sgr-34"> bash  </span><span class=""> </span><span class="sgr-7"> 0.x.0-release-note </span><span class="sgr-7 sgr-35"> </span><span class=""> This is the draft release note</span>
+<span class="sgr-1 sgr-7 sgr-34"> elvis </span><span class="">  CONTRIBUTING.md    </span><span class="sgr-7 sgr-35"> </span>
+<span class="sgr-1 sgr-34"> zsh   </span><span class="">  Dockerfile         </span><span class="sgr-7 sgr-35"> </span>
+<span class="">         LICENSE            </span><span class="sgr-7 sgr-35"> </span>
+<span class="">         Makefile           </span><span class="sgr-7 sgr-35"> </span>
+<span class="">         PACKAGING.md       </span><span class="sgr-7 sgr-35"> </span>
+<span class="">         README.md          </span><span class="sgr-7 sgr-35"> </span>
+<span class="">         SECURITY.md        </span><span class="sgr-7 sgr-35"> </span>
+<span class="">        </span><span class="sgr-1 sgr-34"> cmd                </span><span class="sgr-7 sgr-35"> </span>
+<span class="">         go.mod             </span><span class="sgr-7 sgr-35"> </span>
+<span class="">         go.sum             </span><span class="sgr-7 sgr-35"> </span>
+<span class="">        </span><span class="sgr-1 sgr-34"> pkg                </span><span class="sgr-7 sgr-35"> </span>
+<span class="">        </span><span class="sgr-1 sgr-34"> syntaxes           </span><span class="sgr-35">│</span>
+<span class="">        </span><span class="sgr-1 sgr-34"> tools              </span><span class="sgr-35">│</span>
