--- a/website/ttyshot/tour/completion-filter.html
+++ b/website/ttyshot/tour/completion-filter.html
@@ -1,6 +1,6 @@
-<span class="">~&gt; </span><span class="sgr-32">cd</span><span class=""> elvish                                                
-~/elvish&gt; </span><span class="sgr-32">echo</span><span class=""> </span><span class="sgr-4">0.x.0-release-notes.md </span><span class="">              </span><span class="sgr-7">elf@host</span>
-<span class="sgr-1 sgr-37 sgr-45"> COMPLETING argument </span><span class=""> .md</span>
-<span class="sgr-7">0.x.0-release-notes.md</span><span class="">  README.md  
+~&gt; <span class="sgr-32">cd</span> elvish
+~/elvish&gt; <span class="sgr-32">echo</span> <span class="sgr-4">0.x.0-release-notes.md </span>              <span class="sgr-7">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> COMPLETING argument </span> .md
+<span class="sgr-7">0.x.0-release-notes.md</span>  README.md
 CONTRIBUTING.md         SECURITY.md
-PACKAGING.md                  </span>
+PACKAGING.md
