--- a/website/ttyshot/tour/completion.html
+++ b/website/ttyshot/tour/completion.html
@@ -1,11 +1,11 @@
-<span class="">~&gt; </span><span class="sgr-32">cd</span><span class=""> elvish                                                
-~/elvish&gt; </span><span class="sgr-32">echo</span><span class=""> </span><span class="sgr-4">0.x.0-release-notes.md </span><span class="">              </span><span class="sgr-7">elf@host</span>
-<span class="sgr-1 sgr-37 sgr-45"> COMPLETING argument </span><span class=""> </span>
-<span class="sgr-7">0.x.0-release-notes.md</span><span class="">  </span><span class="sgr-1 sgr-34">cmd/     </span>
-<span class="">CONTRIBUTING.md         go.mod
+~&gt; <span class="sgr-32">cd</span> elvish
+~/elvish&gt; <span class="sgr-32">echo</span> <span class="sgr-4">0.x.0-release-notes.md </span>              <span class="sgr-7">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> COMPLETING argument </span>
+<span class="sgr-7">0.x.0-release-notes.md</span>  <span class="sgr-1 sgr-34">cmd/     </span>
+CONTRIBUTING.md         go.mod
 Dockerfile              go.sum
-LICENSE                 </span><span class="sgr-1 sgr-34">pkg/     </span>
-<span class="">Makefile                </span><span class="sgr-1 sgr-34">syntaxes/</span>
-<span class="">PACKAGING.md            </span><span class="sgr-1 sgr-34">tools/   </span>
-<span class="">README.md               </span><span class="sgr-1 sgr-34">vscode/  </span>
-<span class="">SECURITY.md             </span><span class="sgr-1 sgr-34">website/ </span>
+LICENSE                 <span class="sgr-1 sgr-34">pkg/     </span>
+Makefile                <span class="sgr-1 sgr-34">syntaxes/</span>
+PACKAGING.md            <span class="sgr-1 sgr-34">tools/   </span>
+README.md               <span class="sgr-1 sgr-34">vscode/  </span>
+SECURITY.md             <span class="sgr-1 sgr-34">website/ </span>
