--- a/website/ttyshot/tour/lastcmd.html
+++ b/website/ttyshot/tour/lastcmd.html
@@ -1,8 +1,8 @@
-<span class="">~&gt; </span><span class="sgr-32">echo</span><span class=""> abc def                                             
+~&gt; <span class="sgr-32">echo</span> abc def
 abc def
-~&gt; </span><span class="sgr-32">vim</span><span class="">                                              </span><span class="sgr-7">elf@host</span>
-<span class="sgr-1 sgr-37 sgr-45"> LASTCMD </span><span class=""> </span>
+~&gt; <span class="sgr-32">vim</span>                                              <span class="sgr-7">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> LASTCMD </span>
 <span class="sgr-7">    echo abc def                                            </span>
-<span class="">  0 echo
+  0 echo
   1 abc
-  2 def</span>
+  2 def
