--- a/website/ttyshot/tour/location-filter.html
+++ b/website/ttyshot/tour/location-filter.html
@@ -1,6 +1,6 @@
-<span class="">~&gt;                                                  </span><span class="sgr-7">elf@host</span>
-<span class="sgr-1 sgr-37 sgr-45"> LOCATION </span><span class=""> local</span>
+~&gt;                                                  <span class="sgr-7">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> LOCATION </span> local
 <span class="sgr-7"> 47 ~/.local/share/elvish                                   </span>
-<span class=""> 36 /usr/local/bin  
- 28 /usr/local/share     
- 20 /usr/local           </span>
+ 36 /usr/local/bin
+ 28 /usr/local/share
+ 20 /usr/local
