--- a/website/ttyshot/tour/unicode-prompts.html
+++ b/website/ttyshot/tour/unicode-prompts.html
@@ -1,7 +1,7 @@
-<span class="">~&gt; </span><span class="sgr-32">set</span><span class=""> </span><span class="sgr-35">edit:rprompt</span><span class=""> </span><span class="sgr-33">=</span><span class=""> </span><span class="sgr-1">(</span><span class="sgr-32">constantly</span><span class=""> ^                         
-       </span><span class="sgr-1">(</span><span class="sgr-32">styled</span><span class=""> </span><span class="sgr-1">(</span><span class="sgr-32">whoami</span><span class="sgr-1">)</span><span class="sgr-33">&#34;\u00A7&#34;</span><span class="sgr-1">(</span><span class="sgr-32">hostname</span><span class="sgr-1">)</span><span class=""> inverse</span><span class="sgr-1">))</span><span class="">         
-~&gt; </span><span class="sgr-32">set</span><span class=""> </span><span class="sgr-35">edit:prompt</span><span class=""> </span><span class="sgr-33">=</span><span class=""> </span><span class="sgr-1">{</span><span class="sgr-32">||</span><span class="">                                    
-       </span><span class="sgr-32">tilde-abbr</span><span class=""> </span><span class="sgr-35">$pwd</span><span class="">                                      
-       </span><span class="sgr-32">styled</span><span class=""> </span><span class="sgr-33">&#34; \u00BB\u00BB &#34;</span><span class=""> bright-red                   
-   </span><span class="sgr-1">}</span><span class="">                                                        
-~</span><span class="sgr-91"> »» </span><span class="sgr-36"># Fancy unicode prompts!</span><span class="">           </span><span class="sgr-7">elf§host.example.com</span>
+~&gt; <span class="sgr-32">set</span> <span class="sgr-35">edit:rprompt</span> <span class="sgr-33">=</span> <span class="sgr-1">(</span><span class="sgr-32">constantly</span> ^
+       <span class="sgr-1">(</span><span class="sgr-32">styled</span> <span class="sgr-1">(</span><span class="sgr-32">whoami</span><span class="sgr-1">)</span><span class="sgr-33">"\u00A7"</span><span class="sgr-1">(</span><span class="sgr-32">hostname</span><span class="sgr-1">)</span> inverse<span class="sgr-1">))</span>
+~&gt; <span class="sgr-32">set</span> <span class="sgr-35">edit:prompt</span> <span class="sgr-33">=</span> <span class="sgr-1">{</span><span class="sgr-32">||</span>
+       <span class="sgr-32">tilde-abbr</span> <span class="sgr-35">$pwd</span>
+       <span class="sgr-32">styled</span> <span class="sgr-33">" \u00BB\u00BB "</span> bright-red
+   <span class="sgr-1">}</span>
+~<span class="sgr-91"> »» </span><span class="sgr-36"># Fancy unicode prompts!</span>           <span class="sgr-7">elf§host.example.com</span>
