--- a/website/ttyshot/control-structures.html
+++ b/website/ttyshot/control-structures.html
@@ -1,15 +1,15 @@
-<span class="">~&gt; </span><span class="sgr-32">if</span><span class=""> </span><span class="sgr-35">$true</span><span class=""> </span><span class="sgr-1">{</span><span class=""> </span><span class="sgr-32">echo</span><span class=""> good </span><span class="sgr-1">}</span><span class=""> </span><span class="sgr-33">else</span><span class=""> </span><span class="sgr-1">{</span><span class=""> </span><span class="sgr-32">echo</span><span class=""> bad </span><span class="sgr-1">}</span><span class="">                 
+~&gt; <span class="sgr-32">if</span> <span class="sgr-35">$true</span> <span class="sgr-1">{</span> <span class="sgr-32">echo</span> good <span class="sgr-1">}</span> <span class="sgr-33">else</span> <span class="sgr-1">{</span> <span class="sgr-32">echo</span> bad <span class="sgr-1">}</span>
 good
-~&gt; </span><span class="sgr-32">for</span><span class=""> </span><span class="sgr-35">x</span><span class=""> </span><span class="sgr-1">[</span><span class="">lorem ipsum</span><span class="sgr-1">]</span><span class=""> </span><span class="sgr-1">{</span><span class=""> </span><span class="sgr-32">put</span><span class=""> </span><span class="sgr-35">$x</span><span class="">.pdf </span><span class="sgr-1">}</span><span class="">                       
+~&gt; <span class="sgr-32">for</span> <span class="sgr-35">x</span> <span class="sgr-1">[</span>lorem ipsum<span class="sgr-1">]</span> <span class="sgr-1">{</span> <span class="sgr-32">put</span> <span class="sgr-35">$x</span>.pdf <span class="sgr-1">}</span>
 ▶ lorem.pdf
 ▶ ipsum.pdf
-~&gt; </span><span class="sgr-32">try</span><span class=""> </span><span class="sgr-1">{</span><span class="">                                                    
-        </span><span class="sgr-32">fail</span><span class=""> </span><span class="sgr-33">&#39;bad error&#39;</span><span class="">                                    
-   </span><span class="sgr-1">}</span><span class=""> catch e </span><span class="sgr-1">{</span><span class="">                                              
-       </span><span class="sgr-32">put</span><span class=""> </span><span class="sgr-35">$e</span><span class="">                                               
-   </span><span class="sgr-1">}</span><span class=""> finally </span><span class="sgr-1">{</span><span class="">                                              
-       </span><span class="sgr-32">put</span><span class=""> done                                             
-   </span><span class="sgr-1">}</span><span class="">                                                        
-▶ [&amp;reason=[&amp;content=&#39;bad error&#39; &amp;type=fail]]
+~&gt; <span class="sgr-32">try</span> <span class="sgr-1">{</span>
+        <span class="sgr-32">fail</span> <span class="sgr-33">'bad error'</span>
+   <span class="sgr-1">}</span> catch e <span class="sgr-1">{</span>
+       <span class="sgr-32">put</span> <span class="sgr-35">$e</span>
+   <span class="sgr-1">}</span> finally <span class="sgr-1">{</span>
+       <span class="sgr-32">put</span> done
+   <span class="sgr-1">}</span>
+▶ [&amp;reason=[&amp;content='bad error' &amp;type=fail]]
 ▶ done
-~&gt;                                                  </span><span class="sgr-7">elf@host</span>
+~&gt;                                                  <span class="sgr-7">elf@host</span>
