--- a/website/ttyshot/fundamentals/history-2.html
+++ b/website/ttyshot/fundamentals/history-2.html
@@ -1,2 +1,2 @@
-<span class="">~&gt; </span><span class="sgr-32">ra</span><span class="sgr-4 sgr-32">ndint</span><span class="sgr-4"> 1 10</span><span class="">                                     </span><span class="sgr-7">elf@host</span>
+~&gt; <span class="sgr-32">ra</span><span class="sgr-4 sgr-32">ndint</span><span class="sgr-4"> 1 10</span>                                     <span class="sgr-7">elf@host</span>
 <span class="sgr-1 sgr-37 sgr-45"> HISTORY #125 </span>
