--- a/website/ttyshot/location-mode.html
+++ b/website/ttyshot/location-mode.html
@@ -1,11 +1,11 @@
-<span class="">~&gt;                                                  </span><span class="sgr-7">elf@host</span>
-<span class="sgr-1 sgr-37 sgr-45"> LOCATION </span><span class=""> </span>
+~&gt;                                                  <span class="sgr-7">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> LOCATION </span>
 <span class="sgr-7"> 51 /tmp                                                    </span>
-<span class=""> 51 ~/elvish
+ 51 ~/elvish
  50 ~/.config/elvish
  47 ~/.local/share/elvish
  42 /usr
  36 /usr/local/bin
  28 /usr/local/share
  20 /usr/local
- 10 /opt</span>
+ 10 /opt
