--- a/website/ttyshot/tour/history-list.html
+++ b/website/ttyshot/tour/history-list.html
@@ -1,16 +1,16 @@
-<span class="">~&gt;                                                  </span><span class="sgr-7">elf@host</span>
-<span class="sgr-1 sgr-37 sgr-45"> HISTORY (dedup on) </span><span class=""> 
- 126 echo (styled warning: red) bumpy road                 </span><span class="sgr-35">│</span>
-<span class=""> 127 echo &#34;hello\nbye&#34; &gt; /tmp/x                            </span><span class="sgr-7 sgr-35"> </span>
-<span class=""> 128 from-lines &lt; /tmp/x                                   </span><span class="sgr-7 sgr-35"> </span>
-<span class=""> 129 cd /tmp                                               </span><span class="sgr-7 sgr-35"> </span>
-<span class=""> 130 cd ~/elvish                                           </span><span class="sgr-7 sgr-35"> </span>
-<span class=""> 131 git branch                                            </span><span class="sgr-7 sgr-35"> </span>
-<span class=""> 132 git checkout .                                        </span><span class="sgr-7 sgr-35"> </span>
-<span class=""> 133 git commit                                            </span><span class="sgr-7 sgr-35"> </span>
-<span class=""> 142 git status                                            </span><span class="sgr-7 sgr-35"> </span>
-<span class=""> 143 cd /usr/local/bin                                     </span><span class="sgr-7 sgr-35"> </span>
-<span class=""> 144 echo $pwd                                             </span><span class="sgr-7 sgr-35"> </span>
-<span class=""> 145 * (+ 3 4) (- 100 94)                                  </span><span class="sgr-7 sgr-35"> </span>
-<span class=""> 154 make                                                  </span><span class="sgr-7 sgr-35"> </span>
+~&gt;                                                  <span class="sgr-7">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> HISTORY (dedup on) </span>
+ 126 echo (styled warning: red) bumpy road                 <span class="sgr-35">│</span>
+ 127 echo "hello\nbye" &gt; /tmp/x                            <span class="sgr-7 sgr-35"> </span>
+ 128 from-lines &lt; /tmp/x                                   <span class="sgr-7 sgr-35"> </span>
+ 129 cd /tmp                                               <span class="sgr-7 sgr-35"> </span>
+ 130 cd ~/elvish                                           <span class="sgr-7 sgr-35"> </span>
+ 131 git branch                                            <span class="sgr-7 sgr-35"> </span>
+ 132 git checkout .                                        <span class="sgr-7 sgr-35"> </span>
+ 133 git commit                                            <span class="sgr-7 sgr-35"> </span>
+ 142 git status                                            <span class="sgr-7 sgr-35"> </span>
+ 143 cd /usr/local/bin                                     <span class="sgr-7 sgr-35"> </span>
+ 144 echo $pwd                                             <span class="sgr-7 sgr-35"> </span>
+ 145 * (+ 3 4) (- 100 94)                                  <span class="sgr-7 sgr-35"> </span>
+ 154 make                                                  <span class="sgr-7 sgr-35"> </span>
 <span class="sgr-7"> 155 math:min 3 1 30                                       </span><span class="sgr-7 sgr-35"> </span>
