--- a/website/ttyshot/tour/navigation.html
+++ b/website/ttyshot/tour/navigation.html
@@ -1,17 +1,17 @@
-<span class="">~&gt; </span><span class="sgr-32">cd</span><span class=""> elvish                                                
-~/elvish&gt;                                           </span><span class="sgr-7">elf@host</span>
-<span class="sgr-1 sgr-37 sgr-45"> NAVIGATING </span><span class=""> </span>
-<span class="sgr-1 sgr-34"> bash  </span><span class=""> </span><span class="sgr-7"> 0.x.0-release-note </span><span class="sgr-7 sgr-35"> </span><span class=""> This is the draft release note</span>
-<span class="sgr-1 sgr-7 sgr-34"> elvis </span><span class="">  CONTRIBUTING.md    </span><span class="sgr-7 sgr-35"> </span>
-<span class="sgr-1 sgr-34"> zsh   </span><span class="">  Dockerfile         </span><span class="sgr-7 sgr-35"> </span>
-<span class="">         LICENSE            </span><span class="sgr-7 sgr-35"> </span>
-<span class="">         Makefile           </span><span class="sgr-7 sgr-35"> </span>
-<span class="">         PACKAGING.md       </span><span class="sgr-7 sgr-35"> </span>
-<span class="">         README.md          </span><span class="sgr-7 sgr-35"> </span>
-<span class="">         SECURITY.md        </span><span class="sgr-7 sgr-35"> </span>
-<span class="">        </span><span class="sgr-1 sgr-34"> cmd                </span><span class="sgr-7 sgr-35"> </span>
-<span class="">         go.mod             </span><span class="sgr-7 sgr-35"> </span>
-<span class="">         go.sum             </span><span class="sgr-7 sgr-35"> </span>
-<span class="">        </span><span class="sgr-1 sgr-34"> pkg                </span><span class="sgr-7 sgr-35"> </span>
-<span class="">        </span><span class="sgr-1 sgr-34"> syntaxes           </span><span class="sgr-35">│</span>
-<span class="">        </span><span class="sgr-1 sgr-34"> tools              </span><span class="sgr-35">│</span>
+~&gt; <span class="sgr-32">cd</span> elvish
+~/elvish&gt;                                           <span class="sgr-7">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> NAVIGATING </span>
+<span class="sgr-1 sgr-34"> bash  </span> <span class="sgr-7"> 0.x.0-release-note </span><span class="sgr-7 sgr-35"> </span> This is the draft release note
+<span class="sgr-1 sgr-7 sgr-34"> elvis </span>  CONTRIBUTING.md    <span class="sgr-7 sgr-35"> </span>
+<span class="sgr-1 sgr-34"> zsh   </span>  Dockerfile         <span class="sgr-7 sgr-35"> </span>
+         LICENSE            <span class="sgr-7 sgr-35"> </span>
+         Makefile           <span class="sgr-7 sgr-35"> </span>
+         PACKAGING.md       <span class="sgr-7 sgr-35"> </span>
+         README.md          <span class="sgr-7 sgr-35"> </span>
+         SECURITY.md        <span class="sgr-7 sgr-35"> </span>
+        <span class="sgr-1 sgr-34"> cmd                </span><span class="sgr-7 sgr-35"> </span>
+         go.mod             <span class="sgr-7 sgr-35"> </span>
+         go.sum             <span class="sgr-7 sgr-35"> </span>
+        <span class="sgr-1 sgr-34"> pkg                </span><span class="sgr-7 sgr-35"> </span>
+        <span class="sgr-1 sgr-34"> syntaxes           </span><span class="sgr-35">│</span>
+        <span class="sgr-1 sgr-34"> tools              </span><span class="sgr-35">│</span>
