website/cmd/ttyshot: Fix handling of SGR inverse.
See comment in interp.go for details.

--- a/website/ttyshot/control-structures.html
+++ b/website/ttyshot/control-structures.html
@@ -12,4 +12,4 @@ good
    <span class="sgr-1">}</span>
 ▶ [&amp;reason=[&amp;content='bad error' &amp;type=fail]]
 ▶ done
-~&gt;                                                  <span class="sgr-7">elf@host</span>
+~&gt;                                                  <span class="sgr-7fg sgr-7bg">elf@host</span>
