--- a/website/ttyshot/navigation-mode.html
+++ b/website/ttyshot/navigation-mode.html
@@ -1,17 +1,17 @@
 ~&gt; <span class="sgr-32">cd</span> elvish
-~/elvish&gt;                                           <span class="sgr-7">elf@host</span>
+~/elvish&gt;                                           <span class="sgr-7fg sgr-7bg">elf@host</span>
 <span class="sgr-1 sgr-37 sgr-45"> NAVIGATING </span>
-<span class="sgr-1 sgr-34"> bash  </span> <span class="sgr-7"> 0.x.0-release-note </span><span class="sgr-7 sgr-35"> </span> This is the draft release note
-<span class="sgr-1 sgr-7 sgr-34"> elvis </span>  CONTRIBUTING.md    <span class="sgr-7 sgr-35"> </span>
-<span class="sgr-1 sgr-34"> zsh   </span>  Dockerfile         <span class="sgr-7 sgr-35"> </span>
-         LICENSE            <span class="sgr-7 sgr-35"> </span>
-         Makefile           <span class="sgr-7 sgr-35"> </span>
-         PACKAGING.md       <span class="sgr-7 sgr-35"> </span>
-         README.md          <span class="sgr-7 sgr-35"> </span>
-         SECURITY.md        <span class="sgr-7 sgr-35"> </span>
-        <span class="sgr-1 sgr-34"> cmd                </span><span class="sgr-7 sgr-35"> </span>
-         go.mod             <span class="sgr-7 sgr-35"> </span>
-         go.sum             <span class="sgr-7 sgr-35"> </span>
-        <span class="sgr-1 sgr-34"> pkg                </span><span class="sgr-7 sgr-35"> </span>
+<span class="sgr-1 sgr-34"> bash  </span> <span class="sgr-7fg sgr-7bg"> 0.x.0-release-note </span><span class="sgr-7fg sgr-45"> </span> This is the draft release note
+<span class="sgr-7fg sgr-1 sgr-44"> elvis </span>  CONTRIBUTING.md    <span class="sgr-7fg sgr-45"> </span>
+<span class="sgr-1 sgr-34"> zsh   </span>  Dockerfile         <span class="sgr-7fg sgr-45"> </span>
+         LICENSE            <span class="sgr-7fg sgr-45"> </span>
+         Makefile           <span class="sgr-7fg sgr-45"> </span>
+         PACKAGING.md       <span class="sgr-7fg sgr-45"> </span>
+         README.md          <span class="sgr-7fg sgr-45"> </span>
+         SECURITY.md        <span class="sgr-7fg sgr-45"> </span>
+        <span class="sgr-1 sgr-34"> cmd                </span><span class="sgr-7fg sgr-45"> </span>
+         go.mod             <span class="sgr-7fg sgr-45"> </span>
+         go.sum             <span class="sgr-7fg sgr-45"> </span>
+        <span class="sgr-1 sgr-34"> pkg                </span><span class="sgr-7fg sgr-45"> </span>
         <span class="sgr-1 sgr-34"> syntaxes           </span><span class="sgr-35">│</span>
         <span class="sgr-1 sgr-34"> tools              </span><span class="sgr-35">│</span>
