--- a/website/ttyshot/pipelines.html
+++ b/website/ttyshot/pipelines.html
@@ -18,4 +18,4 @@
 <span class="sgr-92">open  </span> 1591 Add a &amp;benchmark option to the time command
 <span class="sgr-92">open  </span> 1592 Should `make style` implicitly run the `codes
 <span class="sgr-92">open  </span> 1587 vi append command binding
-~&gt;                                                  <span class="sgr-7">elf@host</span>
+~&gt;                                                  <span class="sgr-7fg sgr-7bg">elf@host</span>
