--- a/website/ttyshot/ref/edit/completion-mode.html
+++ b/website/ttyshot/ref/edit/completion-mode.html
@@ -1,6 +1,6 @@
 ~&gt; <span class="sgr-32">cd</span> elvish
-~/elvish&gt; <span class="sgr-32">vim</span> CONTRIBUTING.md <span class="sgr-4">README.md </span>            <span class="sgr-7">elf@host</span>
+~/elvish&gt; <span class="sgr-32">vim</span> CONTRIBUTING.md <span class="sgr-4">README.md </span>            <span class="sgr-7fg sgr-7bg">elf@host</span>
 <span class="sgr-1 sgr-37 sgr-45"> COMPLETING argument </span> .md
-0.x.0-release-notes.md  <span class="sgr-7">README.md  </span>
+0.x.0-release-notes.md  <span class="sgr-7fg sgr-7bg">README.md  </span>
 CONTRIBUTING.md         SECURITY.md
 PACKAGING.md
