--- a/website/ttyshot/tour/completion-filter.html
+++ b/website/ttyshot/tour/completion-filter.html
@@ -1,6 +1,6 @@
 ~&gt; <span class="sgr-32">cd</span> elvish
-~/elvish&gt; <span class="sgr-32">echo</span> <span class="sgr-4">0.x.0-release-notes.md </span>              <span class="sgr-7">elf@host</span>
+~/elvish&gt; <span class="sgr-32">echo</span> <span class="sgr-4">0.x.0-release-notes.md </span>              <span class="sgr-7fg sgr-7bg">elf@host</span>
 <span class="sgr-1 sgr-37 sgr-45"> COMPLETING argument </span> .md
-<span class="sgr-7">0.x.0-release-notes.md</span>  README.md
+<span class="sgr-7fg sgr-7bg">0.x.0-release-notes.md</span>  README.md
 CONTRIBUTING.md         SECURITY.md
 PACKAGING.md
