--- a/website/ttyshot/tour/completion.html
+++ b/website/ttyshot/tour/completion.html
@@ -1,7 +1,7 @@
 ~&gt; <span class="sgr-32">cd</span> elvish
-~/elvish&gt; <span class="sgr-32">echo</span> <span class="sgr-4">0.x.0-release-notes.md </span>              <span class="sgr-7">elf@host</span>
+~/elvish&gt; <span class="sgr-32">echo</span> <span class="sgr-4">0.x.0-release-notes.md </span>              <span class="sgr-7fg sgr-7bg">elf@host</span>
 <span class="sgr-1 sgr-37 sgr-45"> COMPLETING argument </span>
-<span class="sgr-7">0.x.0-release-notes.md</span>  <span class="sgr-1 sgr-34">cmd/     </span>
+<span class="sgr-7fg sgr-7bg">0.x.0-release-notes.md</span>  <span class="sgr-1 sgr-34">cmd/     </span>
 CONTRIBUTING.md         go.mod
 Dockerfile              go.sum
 LICENSE                 <span class="sgr-1 sgr-34">pkg/     </span>
