--- a/website/ttyshot/tour/unicode-prompts.html
+++ b/website/ttyshot/tour/unicode-prompts.html
@@ -4,4 +4,4 @@
        <span class="sgr-32">tilde-abbr</span> <span class="sgr-35">$pwd</span>
        <span class="sgr-32">styled</span> <span class="sgr-33">" \u00BB\u00BB "</span> bright-red
    <span class="sgr-1">}</span>
-~<span class="sgr-91"> »» </span><span class="sgr-36"># Fancy unicode prompts!</span>           <span class="sgr-7">elf§host.example.com</span>
+~<span class="sgr-91"> »» </span><span class="sgr-36"># Fancy unicode prompts!</span>           <span class="sgr-7fg sgr-7bg">elf§host.example.com</span>
