--- a/website/ttyshot/pipelines.html
+++ b/website/ttyshot/pipelines.html
@@ -1,10 +1,12 @@
 ~&gt; <span class="sgr-32">use</span> math
-~&gt; <span class="sgr-32">var</span> <span class="sgr-35">stateColors</span> <span class="sgr-33">=</span> <span class="sgr-1">[&amp;</span>open=fg-bright-green <span class="sgr-1">&amp;</span>closed=fg-red<span class="sgr-1">]</span>
+~&gt; <span class="sgr-32">var</span> <span class="sgr-35">stateColors</span> <span class="sgr-33">=</span> <span class="sgr-1">[&amp;</span>open=fg-bright-green <span class="sgr-1">&amp;</span>closed=fg-red
+   <span class="sgr-1">]</span>
 ~&gt; <span class="sgr-32">fn</span> colored <span class="sgr-1">{</span><span class="sgr-32">|</span>state<span class="sgr-32">|</span>
        <span class="sgr-32">put</span> <span class="sgr-1">(</span><span class="sgr-32">styled</span> <span class="sgr-1">{</span><span class="sgr-35">$state</span><span class="sgr-33">"  "</span><span class="sgr-1">}[</span>..6<span class="sgr-1">]</span> <span class="sgr-35">$stateColors</span><span class="sgr-1">[</span><span class="sgr-35">$state</span><span class="sgr-1">])</span>
+
    <span class="sgr-1">}</span>
-~&gt; <span class="sgr-32">var</span> <span class="sgr-35">url</span> <span class="sgr-33">=</span> <span class="sgr-33">"https://api.github.com/repos/elves/elvish/issu</span>
-   <span class="sgr-33">es?state=all&amp;sort=updated&amp;per_page=5"</span>
+~&gt; <span class="sgr-32">var</span> <span class="sgr-35">url</span> <span class="sgr-33">=</span> <span class="sgr-33">"https://api.github.com/repos/elves/elvish/is</span>
+   <span class="sgr-33">sues?state=all&amp;sort=updated&amp;per_page=5"</span>
 ~&gt; <span class="sgr-32">curl</span> -s <span class="sgr-35">$url</span> <span class="sgr-32">|</span> <span class="sgr-32">from-json</span> <span class="sgr-32">|</span> <span class="sgr-32">all</span> <span class="sgr-1">(</span><span class="sgr-32">one</span><span class="sgr-1">)</span> <span class="sgr-32">|</span>
    <span class="sgr-32">each</span> <span class="sgr-1">{</span><span class="sgr-32">|</span>issue<span class="sgr-32">|</span>
        <span class="sgr-32">var</span> <span class="sgr-35">id</span> <span class="sgr-33">=</span> <span class="sgr-1">(</span><span class="sgr-32">exact-num</span> <span class="sgr-35">$issue</span><span class="sgr-1">[</span>number<span class="sgr-1">])</span>
@@ -18,4 +20,4 @@
 <span class="sgr-92">open  </span> 1591 Add a &amp;benchmark option to the time command
 <span class="sgr-92">open  </span> 1592 Should `make style` implicitly run the `codes
 <span class="sgr-92">open  </span> 1587 vi append command binding
-~&gt;                                                  <span class="sgr-7fg sgr-7bg">elf@host</span>
+~&gt;                                                <span class="sgr-7fg sgr-7bg">elf@host</span>
