--- a/website/ttyshot/tour/completion.html
+++ b/website/ttyshot/tour/completion.html
@@ -1,11 +1,9 @@
 ~&gt; <span class="sgr-32">cd</span> elvish
-~/elvish&gt; <span class="sgr-32">echo</span> <span class="sgr-4">0.x.0-release-notes.md </span>              <span class="sgr-7fg sgr-7bg">elf@host</span>
+~/elvish&gt; <span class="sgr-32">echo</span> <span class="sgr-4">1.0-release.md </span>                    <span class="sgr-7fg sgr-7bg">elf@host</span>
 <span class="sgr-1 sgr-37 sgr-45"> COMPLETING argument </span>
-<span class="sgr-7fg sgr-7bg">0.x.0-release-notes.md</span>  <span class="sgr-1 sgr-34">cmd/     </span>
-CONTRIBUTING.md         go.mod
-Dockerfile              go.sum
-LICENSE                 <span class="sgr-1 sgr-34">pkg/     </span>
-Makefile                <span class="sgr-1 sgr-34">syntaxes/</span>
-PACKAGING.md            <span class="sgr-1 sgr-34">tools/   </span>
-README.md               <span class="sgr-1 sgr-34">vscode/  </span>
-SECURITY.md             <span class="sgr-1 sgr-34">website/ </span>
+<span class="sgr-7fg sgr-7bg">1.0-release.md </span>  README.md    <span class="sgr-1 sgr-34">syntaxes/</span>
+CONTRIBUTING.md  SECURITY.md  <span class="sgr-1 sgr-34">tools/   </span>
+Dockerfile       <span class="sgr-1 sgr-34">cmd/       </span>  <span class="sgr-1 sgr-34">vscode/  </span>
+LICENSE          go.mod       <span class="sgr-1 sgr-34">website/ </span>
+Makefile         go.sum
+PACKAGING.md     <span class="sgr-1 sgr-34">pkg/       </span>
