--- a/website/ttyshot/fundamentals/history-1.html
+++ b/website/ttyshot/fundamentals/history-1.html
@@ -1,2 +1,4 @@
-~&gt; <span class="sgr-4 sgr-32">math:min</span><span class="sgr-4"> 3 1 30</span>                                <span class="sgr-7fg sgr-7bg">elf@host</span>
-<span class="sgr-1 sgr-37 sgr-45"> HISTORY #155 </span>
+~&gt; <span class="sgr-32">randint</span> 1 7
+▶ (num 1)
+~&gt; <span class="sgr-4 sgr-32">randint</span><span class="sgr-4"> 1 7</span>                                    <span class="sgr-7fg sgr-7bg">elf@host</span>
+<span class="sgr-1 sgr-37 sgr-45"> HISTORY #156 </span>
