website/cmd/ttyshot: Various small tweaks.
- Remove all content before "[CUT]". This allows the ttyshot spec to remove part
  of setup.

- Use a edit:max-height value of 15, to generate ttyshots with size consistent
  with the original ones.

- Add more entries to directory history to get more lines in the history listing
  ttyshot.

- Adjust specs for the ttyshots on the home page to get the ttyshots have the
  same height.

--- a/website/ttyshot/navigation-mode.html
+++ b/website/ttyshot/navigation-mode.html
@@ -1,4 +1,3 @@
-~&gt; <span class="sgr-32">cd</span> elvish
 ~/elvish&gt;                                         <span class="sgr-7fg sgr-7bg">elf@host</span>
 <span class="sgr-1 sgr-37 sgr-45"> NAVIGATING </span>
 <span class="sgr-1 sgr-34"> bash   </span> <span class="sgr-7fg sgr-7bg"> 1.0-release.md  </span><span class="sgr-7fg sgr-45"> </span> 1.0 has not been released yet.
@@ -12,6 +11,5 @@
          <span class="sgr-1 sgr-34"> cmd             </span><span class="sgr-7fg sgr-45"> </span>
           go.mod          <span class="sgr-7fg sgr-45"> </span>
           go.sum          <span class="sgr-7fg sgr-45"> </span>
-         <span class="sgr-1 sgr-34"> pkg             </span><span class="sgr-7fg sgr-45"> </span>
+         <span class="sgr-1 sgr-34"> pkg             </span><span class="sgr-35">│</span>
          <span class="sgr-1 sgr-34"> syntaxes        </span><span class="sgr-35">│</span>
-         <span class="sgr-1 sgr-34"> tools           </span><span class="sgr-35">│</span>
