--- a/website/home/control-structures.ttyshot.html
+++ b/website/home/control-structures.ttyshot.html
@@ -6,10 +6,10 @@ good
 lorem.pdf
 ipsum.pdf
 ~&gt; <span class="sgr-32">try</span> <span class="sgr-1">{</span>
-     <span class="sgr-32">fail</span> <span class="sgr-33">'bad error'</span>
-   <span class="sgr-1">}</span> catch e <span class="sgr-1">{</span>
-     <span class="sgr-32">echo</span> error <span class="sgr-35">$e</span>
-   <span class="sgr-1">}</span> else <span class="sgr-1">{</span>
+     <span class="sgr-32">fail</span> <span class="sgr-33">'something bad happened'</span>
+   <span class="sgr-1">}</span> <span class="sgr-33">catch</span> <span class="sgr-35">e</span> <span class="sgr-1">{</span>
+     <span class="sgr-32">echo</span> <span class="sgr-1">(</span><span class="sgr-32">styled</span> <span class="sgr-33">'error:'</span> red<span class="sgr-1">)</span> <span class="sgr-35">$e</span><span class="sgr-1">[</span>reason<span class="sgr-1">][</span>content<span class="sgr-1">]</span>
+   <span class="sgr-1">}</span> <span class="sgr-33">else</span> <span class="sgr-1">{</span>
      <span class="sgr-32">echo</span> ok
    <span class="sgr-1">}</span>
-error [&amp;reason=[&amp;content='bad error' &amp;type=fail]]
+<span class="sgr-31">error:</span> something bad happened
