website: Make the content div have "content" as a class instead of id.
"#content" has a very high specificity and makes it harder to override.

This fixes the override of the <h2> in demo descriptions in the homepage.

--- a/website/template.html
+++ b/website/template.html
@@ -162,7 +162,7 @@
 </html>
 
 {{ define "article-content" }}
-  <div id="content">
+  <div class="content">
     <article>
       {{ if not .IsHomepage }}
         <div class="article-title">
@@ -181,7 +181,7 @@
 
 {{ define "category-content" }}
   {{ $category := .Category }}
-  <div id="content" class="category">
+  <div class="content category">
     {{ if .Prelude }}
       <article>
         {{ .Prelude }}
